# cfour_parser

./: geometry.py  programs.py  pyproject.toml  readme.md  text.py  util.py  xcfour.py  xdqcscf.py  xjoda.py  xncc.py  xvee.py  xvscf.py
examples/: pyrazine.c4
src/cfour_parser/: __main__.py  programs.py  text.py  util.py  xcfour.py  xdqcscf.py  xjoda.py  xncc.py  xsim.py  xvcc.py  xvee.py  xvscf.py
