[project]
name = "cfour_parser"
version = "0.0.1"
description = "Parser of the CFOUR output."
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
classifiers = [
    "Topic :: File Formats :: JSON",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
keywords = ["CFOUR", "parser"]
license = { file = "license" }
readme = "readme.md"
authors = [{ name = "Paweł Wójcik <https://github.com/the-pawel-wojcik>" }]

[project.urls]
repository = "https://github.com/the-pawel-wojcik/cfour_parser"

[project.scripts]
cfour_parser = "cfour_parser.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

